// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Routes /api/pages should have a validation schema 1`] = `
Object {
  "children": Object {
    "__v": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "type": "number",
    },
    "_id": Object {
      "invalids": Array [
        "",
      ],
      "rules": Array [
        Object {
          "arg": Object {
            "pattern": /\\^\\[0-9a-fA-F\\]\\{24\\}\\$/,
          },
          "name": "regex",
        },
      ],
      "type": "string",
    },
    "language": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "metadata": Object {
      "children": Object {
        "_id": Object {
          "invalids": Array [
            "",
          ],
          "rules": Array [
            Object {
              "arg": Object {
                "pattern": /\\^\\[0-9a-fA-F\\]\\{24\\}\\$/,
              },
              "name": "regex",
            },
          ],
          "type": "string",
        },
        "content": Object {
          "type": "string",
          "valids": Array [
            "",
          ],
        },
        "script": Object {
          "type": "string",
          "valids": Array [
            "",
          ],
        },
      },
      "type": "object",
    },
    "sharedId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "title": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`Pages Routes DELETE should have a validation schema 1`] = `
Object {
  "children": Object {
    "sharedId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`Pages Routes GET /api/pages should have a validation schema 1`] = `
Object {
  "children": Object {
    "sharedId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;
